--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@
         font-size: 60px;
         vertical-align: middle;
         color: #000000;
+        cursor: pointer;
     }
     
     .letters {
@@ -122,6 +123,7 @@
         margin-right: 20px;
         margin-top: 20px;
         float: right;
+        cursor: pointer;
     }
 
     #displayScore{
